durable PoC: read side takes declared-path form -- the shape enum leaves the SPI
list(kind, path, anchors, pageToken) replaces list(ListScope, pageToken): each kind's lookup
paths are declared in the durable logical data model (named paths with anchor signatures) and
realized in the store's registration, so the SPI carries no per-kind vocabulary. ListScope and
its three shapes (CHILDREN_OF_PARENT, REFERENCING, UNDER_LOCATION_PREFIX) are deleted; the
kind-less form of list serves the cross-kind children-existence check as a union over the kinds
declaring the path, evaluated store-side. get/getMany/versionsOf unchanged.

Every new name is EJ-confirmed (Slack thread 1786406997.130489; confirmation 1786419416.434249,
"暂行你的推荐"):
- LookupPath, the SPI value type naming a declared path -- from the data model doc's own
  "other lookup paths" heading, not coined.
- Path names, verbatim from the doc's bullets, constants beside the kinds in PolarisRecordKinds:
  by-parent, by-location-prefix (entity); by-securable, by-grantee (grant record); by-target,
  by-policy (policy mapping).

Anchor signatures preserve the shipped queries' exact filter columns: by-parent binds the parent
address (catalog_id, parent_id [, sub_type_code]); by-location-prefix keeps generateOverlapQuery
unchanged, anchored on the catalog as the shipped query has it. The two directions the old
REFERENCING shape conflated are now their own paths, which also realizes the by-grantee and
by-policy directions JDBC had declared indexes for but never served. TreeMap's location matcher
now mirrors the overlap query in both directions (ancestor segments and descendants) instead of
descendants-only, and both stores validate anchors against the declared signature (arity and
types) rather than surfacing a ClassCastException.

Tests, counted from build/test-results/test/*.xml: polaris-core 794 tests / 16 skipped / 0
failures; polaris-treemap 21 / 0 / 0; polaris-relational-jdbc 215 / 1 / 0. The JDBC record store
gets its 