@@ -38,7 +38,7 @@ import org.apache.polaris.core.policy.PolarisPolicyMappingRecord;
 import org.apache.polaris.core.storage.StorageLocation;
 import org.apache.polaris.spi.durable.CommitResult;
 import org.apache.polaris.spi.durable.DurableRecordStore;
-import org.apache.polaris.spi.durable.ListScope;
+import org.apache.polaris.spi.durable.LookupPath;
 import org.apache.polaris.spi.durable.Mutation;
 import org.apache.polaris.spi.durable.Precondition;
 import org.apache.polaris.spi.durable.RecordKind;
@@ -66,12 +66,13 @@ import org.jspecify.annotations.Nullable;
  * rows between the two would make a conformance run depend on which implementation wrote first. Two
  * stores, two sets of rows.
  *
- * <p><b>Scopes are served by scanning this store's own maps.</b> There is no index to seek, so
- * {@link #list} walks the kind's slice and keeps what matches. That is not caller-side filtering,
- * which the contract forbids because it would put rows on a wire: the store evaluates the scope
- * itself, and no wire exists. The shipped {@code hasOverlappingSiblings} on the old shape already
- * works exactly this way, with its own {@code // TODO we could optimize this full scan}. This class
- * is a conformance target and a second atomicity domain, not a performance target.
+ * <p><b>Declared lookup paths are served by scanning this store's own maps.</b> There is no index
+ * to seek, so {@link #list} walks the kind's slice and keeps what matches the path's anchors. That
+ * is not caller-side filtering, which the contract forbids because it would put rows on a wire: the
+ * store evaluates the path itself, and no wire exists. The shipped {@code hasOverlappingSiblings}
+ * on the old shape already works exactly this way, with its own {@code // TODO we could optimize
+ * this full scan}. This class is a conformance target and a second atomicity domain, not a
+ * performance target.
  */
 public class TreeMapDurableRecordStore implements DurableRecordStore {
 
@@ -124,22 +125,39 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
   // ------------------------------------------------------------------ registry
 
   /**
-   * What a kind needs: where its rows live, how to key one, and how to answer each question a scope
-   * or a precondition can ask about it.
+   * What a kind needs: where its rows live, how to key one, which lookup paths its data-model
+   * declaration states, and how to answer a precondition.
    *
    * @param identityKey the slice key for a record, and the same format {@link RecordRef} identity
    *     keys are rendered into
    * @param uniquenessKey null when the kind's identity and uniqueness are the same tuple
+   * @param paths the kind's declared lookup paths, realized as record matchers — the registration
+   *     half of the declared-once-normative discipline; empty when the kind declares none
    * @param versions null when the kind carries no version
    */
   private record KindBinding<T>(
       TreeMapSlices.Slice<T> slice,
       Function<T, String> identityKey,
       @Nullable Function<T, String> uniquenessKey,
-      @Nullable Function<T, String> parentAddress,
-      @Nullable Function<T, String> location,
-      Function<T, List<String>> referencedKeys,
+      Map<LookupPath, PathBinding<T>> paths,
       @Nullable Function<T, RecordVersions> versions) {}
+
+  /**
+   * One declared lookup path, realized: the anchor signature the declaration states and the record
+   * predicate that evaluates it against this store's own rows.
+   *
+   * @param anchorTypes the declared required anchors' types, in order
+   * @param trailingType the declared optional trailing anchor's type, or null when the path
+   *     declares none
+   */
+  private record PathBinding<T>(
+      List<Class<?>> anchorTypes,
+      @Nullable Class<?> trailingType,
+      java.util.function.BiPredicate<T, List<Object>> matches) {}
+
+  private static long asLong(Object anchor) {
+    return ((Number) anchor).longValue();
+  }
 
   private Map<RecordKind, KindBinding<?>> buildBindings() {
     Map<RecordKind, KindBinding<?>> map = new LinkedHashMap<>();
@@ -150,9 +168,30 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
             slices.newSlice(e -> key(e.getId()), e -> new PolarisBaseEntity.Builder(e).build()),
             e -> key(e.getId()),
             e -> key(e.getParentId(), e.getTypeCode(), e.getName()),
-            e -> key(e.getCatalogId(), e.getParentId()),
-            TreeMapDurableRecordStore::locationWithoutScheme,
-            e -> List.of(key(e.getParentId())),
+            Map.of(
+                // anchors (parent-catalog, parent [, subtype]): the parent ADDRESS, matching what
+                // the relational store filters on, so one path means the same thing on either store
+                PolarisRecordKinds.ENTITY_BY_PARENT,
+                new PathBinding<>(
+                    List.of(Long.class, Long.class),
+                    Integer.class,
+                    (e, anchors) ->
+                        e.getCatalogId() == asLong(anchors.get(0))
+                            && e.getParentId() == asLong(anchors.get(1))
+                            && (anchors.size() < 3
+                                || e.getSubTypeCode() == (Integer) anchors.get(2))),
+                // anchors (catalog, prefix): the catalog anchor, the scheme-stripping, and the
+                // two match directions all mirror the shipped overlap query, so one anchor list
+                // returns the same rows from either store
+                PolarisRecordKinds.ENTITY_BY_LOCATION_PREFIX,
+                new PathBinding<>(
+                    List.of(Long.class, String.class),
+                    null,
+                    (e, anchors) ->
+                        e.getCatalogId() == asLong(anchors.get(0))
+                            && overlapsLocation(
+                                locationWithoutScheme(e),
+                                StorageLocation.of((String) anchors.get(1)).withoutScheme()))),
             e -> new RecordVersions(e.getEntityVersion(), e.getGrantRecordsVersion())));
 
     map.put(
@@ -161,14 +200,23 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
             slices.newSlice(TreeMapDurableRecordStore::grantKey, PolarisGrantRecord::new),
             TreeMapDurableRecordStore::grantKey,
             null,
-            null,
-            null,
-            // a grant is reachable from either end, which is why the shipped interface's two
-            // list methods collapse into one REFERENCING scope with a different anchor
-            g ->
-                List.of(
-                    key(g.getSecurableCatalogId(), g.getSecurableId()),
-                    key(g.getGranteeCatalogId(), g.getGranteeId())),
+            // the two directions the data model declares, each its own path with its own anchor —
+            // the shipped interface's two list methods map one-to-one onto them
+            Map.of(
+                PolarisRecordKinds.GRANT_RECORD_BY_SECURABLE,
+                new PathBinding<>(
+                    List.of(Long.class, Long.class),
+                    null,
+                    (g, anchors) ->
+                        g.getSecurableCatalogId() == asLong(anchors.get(0))
+                            && g.getSecurableId() == asLong(anchors.get(1))),
+                PolarisRecordKinds.GRANT_RECORD_BY_GRANTEE,
+                new PathBinding<>(
+                    List.of(Long.class, Long.class),
+                    null,
+                    (g, anchors) ->
+                        g.getGranteeCatalogId() == asLong(anchors.get(0))
+                            && g.getGranteeId() == asLong(anchors.get(1)))),
             null));
 
     map.put(
@@ -177,12 +225,21 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
             slices.newSlice(TreeMapDurableRecordStore::policyKey, PolarisPolicyMappingRecord::new),
             TreeMapDurableRecordStore::policyKey,
             null,
-            null,
-            null,
-            p ->
-                List.of(
-                    key(p.getTargetCatalogId(), p.getTargetId()),
-                    key(p.getPolicyCatalogId(), p.getPolicyId())),
+            Map.of(
+                PolarisRecordKinds.POLICY_MAPPING_BY_TARGET,
+                new PathBinding<>(
+                    List.of(Long.class, Long.class),
+                    null,
+                    (p, anchors) ->
+                        p.getTargetCatalogId() == asLong(anchors.get(0))
+                            && p.getTargetId() == asLong(anchors.get(1))),
+                PolarisRecordKinds.POLICY_MAPPING_BY_POLICY,
+                new PathBinding<>(
+                    List.of(Long.class, Long.class),
+                    null,
+                    (p, anchors) ->
+                        p.getPolicyCatalogId() == asLong(anchors.get(0))
+                            && p.getPolicyId() == asLong(anchors.get(1)))),
             null));
 
     map.put(
@@ -191,9 +248,9 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
             slices.newSlice(s -> key(s.getPrincipalClientId()), PolarisPrincipalSecrets::new),
             s -> key(s.getPrincipalClientId()),
             null,
-            null,
-            null,
-            s -> List.of(),
+            // no declared list paths: the model's by-principal and enumeration paths are
+            // documented gaps no shipped backend serves, not declarations to realize here
+            Map.of(),
             null));
 
     map.put(
@@ -203,12 +260,12 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
             slices.newSlice(e -> key(e.getId()), Function.identity()),
             e -> key(e.getId()),
             null,
-            null,
-            null,
-            e -> List.of(),
+            Map.of(),
             null));
 
-    return Map.copyOf(map);
+    // Unmodifiable but ordered: the union form iterates this map, and handing iteration order to
+    // Map.copyOf's per-run salting would make the union's concatenation order a per-JVM accident.
+    return java.util.Collections.unmodifiableMap(map);
   }
 
   private static String key(Object... parts) {
@@ -240,6 +297,29 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
   private static @Nullable String locationWithoutScheme(PolarisBaseEntity entity) {
     String base = entity.getPropertiesAsMap().get(PolarisEntityConstants.ENTITY_BASE_LOCATION);
     return base == null ? null : StorageLocation.of(base).withoutScheme();
+  }
+
+  /**
+   * Whether a stored location overlaps the anchor prefix, in both directions the shipped overlap
+   * query checks: the stored location is a descendant of the anchor, or it equals one of the
+   * anchor's slash-terminated ancestor segments. Mirrors {@code generateOverlapQuery}'s condition
+   * construction exactly, so the two stores return the same rows for the same anchors.
+   */
+  private static boolean overlapsLocation(@Nullable String location, String anchorPrefix) {
+    if (location == null) {
+      return false;
+    }
+    if (location.startsWith(anchorPrefix)) {
+      return true;
+    }
+    StringBuilder ancestor = new StringBuilder();
+    for (String component : anchorPrefix.split("/")) {
+      ancestor.append(component).append("/");
+      if (location.contentEquals(ancestor)) {
+        return true;
+      }
+    }
+    return false;
   }
 
   @SuppressWarnings("unchecked")
@@ -392,57 +472,101 @@ public class TreeMapDurableRecordStore implements DurableRecordStore {
 
   @Override
   public @NonNull <T> Page<T> list(
-      @NonNull ListScope scope, @NonNull PageToken pageToken, @NonNull Class<T> type) {
-    RecordKind kind =
-        scope
-            .kind()
-            .orElseThrow(
-                () ->
-                    new IllegalArgumentException(
-                        "A kind-less scope spans every registered kind and is not implemented by"
-                            + " this store yet"));
+      @NonNull RecordKind kind,
+      @NonNull LookupPath path,
+      @NonNull List<Object> anchors,
+      @NonNull PageToken pageToken,
+      @NonNull Class<T> type) {
     KindBinding<T> b = binding(kind);
-    String anchor = key(scope.anchor().key().toArray());
+    PathBinding<T> p = pathBinding(kind, b, path, anchors);
     List<T> matched =
         slices.runInReadTransaction(
             diagnostics,
             () ->
                 b.slice().readRange("").stream()
-                    .filter(r -> matches(b, scope, anchor, r))
+                    .filter(r -> p.matches().test(r, anchors))
                     .toList());
     // One page: keyset pagination needs an ordered key column, and this store's slice keys are
     // strings chosen per kind rather than a single ordering column.
     return Page.page(pageToken, matched.stream().map(type::cast).toList(), null);
   }
 
-  private <T> boolean matches(KindBinding<T> b, ListScope scope, String anchor, T record) {
-    return switch (scope.shape()) {
-      case CHILDREN_OF_PARENT -> {
-        // The anchor is the parent address [catalogId, parentId], matching what the relational
-        // store filters on, so one scope means the same thing against either store.
-        Function<T, String> parent = b.parentAddress();
-        if (parent == null || !anchor.equals(parent.apply(record))) {
-          yield false;
-        }
-        yield scope.subtype().isEmpty() || subtypeOf(record) == scope.subtype().get();
-      }
-      case REFERENCING -> b.referencedKeys().apply(record).contains(anchor);
-      case UNDER_LOCATION_PREFIX -> {
-        Function<T, String> location = b.location();
-        if (location == null) {
-          yield false;
-        }
-        String value = location.apply(record);
-        yield value != null && value.startsWith(scope.locationPrefix().orElseThrow());
-      }
-    };
+  @Override
+  public @NonNull <T> Page<T> list(
+      @NonNull LookupPath path,
+      @NonNull List<Object> anchors,
+      @NonNull PageToken pageToken,
+      @NonNull Class<T> type) {
+    // The union over every registered kind declaring the path, evaluated here rather than by the
+    // caller. One read transaction covers the whole union, so the result is one snapshot.
+    List<RecordKind> declaring =
+        bindings.entrySet().stream()
+            .filter(e -> e.getValue().paths().containsKey(path))
+            .map(Map.Entry::getKey)
+            .toList();
+    if (declaring.isEmpty()) {
+      throw new IllegalArgumentException(
+          "No registered kind declares lookup path '" + path.name() + "' in this store");
+    }
+    List<T> matched =
+        slices.runInReadTransaction(
+            diagnostics,
+            () -> {
+              List<T> out = new ArrayList<>();
+              for (RecordKind kind : declaring) {
+                KindBinding<T> b = binding(kind);
+                PathBinding<T> p = pathBinding(kind, b, path, anchors);
+                b.slice().readRange("").stream()
+                    .filter(r -> p.matches().test(r, anchors))
+                    .forEach(out::add);
+              }
+              return out;
+            });
+    return Page.page(pageToken, matched.stream().map(type::cast).toList(), null);
   }
 
-  private static int subtypeOf(Object record) {
-    if (record instanceof PolarisBaseEntity entity) {
-      return entity.getSubTypeCode();
+  /** Resolves a declared path and validates the anchors against its declared signature. */
+  private <T> PathBinding<T> pathBinding(
+      RecordKind kind, KindBinding<T> b, LookupPath path, List<Object> anchors) {
+    PathBinding<T> p = b.paths().get(path);
+    if (p == null) {
+      throw new IllegalArgumentException(
+          "Record kind '"
+              + kind.id()
+              + "' declares no lookup path '"
+              + path.name()
+              + "' in this store");
     }
-    throw new IllegalArgumentException("Only entities carry a subtype");
+    int min = p.anchorTypes().size();
+    int max = min + (p.trailingType() == null ? 0 : 1);
+    if (anchors.size() < min || anchors.size() > max) {
+      throw new IllegalArgumentException(
+          "Lookup path '"
+              + path.name()
+              + "' of kind '"
+              + kind.id()
+              + "' declares "
+              + (min == max ? min + " anchors" : min + " to " + max + " anchors")
+              + ", got "
+              + anchors.size());
+    }
+    for (int i = 0; i < anchors.size(); i++) {
+      Class<?> declared = i < min ? p.anchorTypes().get(i) : p.trailingType();
+      if (!declared.isInstance(anchors.get(i))) {
+        throw new IllegalArgumentException(
+            "Lookup path '"
+                + path.name()
+                + "' of kind '"
+                + kind.id()
+                + "' declares anchor "
+                + i
+                + " as "
+                + declared.getSimpleName()
+                + ", got "
+                + (anchors.get(i) == null ? "null" : anchors.get(i).getClass().getSimpleName()));
+      }
+    }
+    return p;
   }
 
   @Override
